# localhostify

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  setup-firewall.ps1  sites.json  sites.toml  tailwind.config.js
assets/: README.md
docs/: index.html
electron/: main.cjs  preload.cjs
examples/: index.html
examples/test-backend/: README.md  package.json  server.js
server-cli/: Cargo.toml
server-cli/src/: main.rs
server-cli/src/network/: ip_detection.rs  mod.rs
server-cli/src/server/: mod.rs  proxy.rs  ssl.rs
src/: App.jsx  styles.css
