[package]
name = "server-cli"
version = "0.1.0"
edition = "2021"
description = "LocalHostify CLI server for static file serving and backend proxying"

[[bin]]
name = "server-cli"
path = "src/main.rs"

[dependencies]
# HTTP Server
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = { version = "1.0" }
tokio = { version = "1.0", features = ["full"] }

# Network & HTTP Client  
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
futures = "0.3"

# SSL/TLS (simplified)
native-tls = { version = "0.2", optional = true }
hyper-tls = { version = "0.6", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
ssl = ["native-tls", "hyper-tls"]